<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="FLOWMETER_CONTROL" Id="{17799ffb-fac5-4c29-835e-e7162f121867}">
    <Declaration><![CDATA[TYPE FLOWMETER_CONTROL :
STRUCT

	SET_TOT: USINT;
	SET_MODE: USINT;

END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>