<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <GVL Name="IOs_Variables" Id="{20043444-7bd4-4d70-ad18-ce462726e58b}">
    <Declaration><![CDATA[{attribute 'Tc2GvlVarNames'}
VAR_GLOBAL


(************************************************************************************************
*
*General
*
***********************************************************************************************)
	PROG_STEPS:PROG_STEPS;


	VAC_VACUUM_SENSOR AT%I*: PRESSURE_SENSOR; (* Valeurs du capteur *)
	VAC_VACUMM_SENSOR_VALUE:REAL; (*Valeur réel*)

(************************************************************************************************
*
*Q1 station variables
*
***********************************************************************************************)

	Q1_PRESSURE_SENSOR AT%IW330: PRESSURE_SENSOR; (*Valeurs du capteur*)
	Q1_PRESSURE_SENSOR_VALUE:REAL;(*Valeur réel*)
	Q1_CALCULETED_FLOW:REAL ;

	Q1_FLOWMETER AT%IW340:FLOWMETER_SENSOR; (*Valeurs du capteur*)
	Q1_FLOWMETER_VALUES :FLOWMETER_VALUES;(*Valeurs réels*)
	Q1_FLOWMETER_CONTROL AT%QW350:FLOWMETER_CONTROL;(*Variables de commande du débitmètre*)

	Q1_CURRENT:REAL;


(************************************************************************************************
*
*Current measurement
*
***********************************************************************************************)
	Q1_Multimeter_mode	AT%Q*:SINT := 3;
	Q2_Multimeter_mode	AT%Q*:SINT := 3;
(*
0 0x00 DC voltage
1 0x01 AC voltage
2 0x02 DC current
3 0x03 AC current
*)

	Q1_Multimeter_range AT%Q* :SINT := 1;
	Q2_Multimeter_range AT%Q* :SINT := 1;

(*
255 0xFF 300 mV / 100 mA
0 0x00  3 V / 1 A 
1 0x01 30 V / 10 A 
2 0x02 300 V (voltage only)  
*)

	Q1_Multimeter_value AT%I*:DINT;
	Q2_Multimeter_value AT%I*:DINT;


END_VAR
]]></Declaration>
    <ObjectProperties />
  </GVL>
</TcPlcObject>